# crypto_tax_tool

./: .env.example  .gitignore  README.md  build_windows.bat  import_csv.bat  pyproject.toml  run_windows.bat
docs/: V1_FREEZE_CHECKLIST.md  WINDOWS_TESTING.md  binance_sync_scope.md  data_model.md  local_storage.md
src/crypto_tax_tool/: __init__.py  __main__.py  csv_import_cli.py  settings.py  updater.py
src/crypto_tax_tool/api/: exchange_base.py
src/crypto_tax_tool/database/: checkpoints.py  connection.py  init_db.py  loaders.py  manual_store.py  schema_models.py  sqlite_store.py  tables_core.py
src/crypto_tax_tool/gui/: main_window.py  sync_worker.py
src/crypto_tax_tool/models/: audit.py  balances.py  enums.py  fifo_state.py  lots.py  manual_entries.py  prices.py  transactions.py
src/crypto_tax_tool/reports/: audit_report.py  csv_report.py  excel_report.py
src/crypto_tax_tool/services/: audit_service.py  backup_service.py  binance_price_provider.py  binance_transaction_history_import_service.py  config_service.py  fee_service.py  fifo.py  fifo_engine.py  pricing.py  reconciliation.py  reconciliation_runner.py  report_service.py  (+5 more)
tests/: test_audit_trail.py  test_binance_helpers.py  test_binance_normalizers.py  test_binance_pagination.py  test_binance_price_provider.py  test_config_service.py  test_fifo.py  test_fifo_engine.py  test_imports.py  test_integration_report_flow.py  test_manual_store.py  test_pricing.py  test_reconciliation.py  test_reports.py  test_sqlite_store.py  test_tax_engine.py  test_tax_rules.py  test_tax_summary.py  test_updater.py
(+9 files in other folders)
