[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-tax-tool"
version = "0.1.0"
description = "Local crypto tax reporting tool for Binance and German tax documentation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jp-ger" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "SQLAlchemy>=2.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
]
build = [
    "pyinstaller>=6.8",
]

[project.scripts]
crypto-tax-tool = "crypto_tax_tool.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
